# -----------------------------------------------------------------------
#   Destription: OpenPD root CMake file
#   Author: Zhong Chong
#   Date: 2015-9-11
# -----------------------------------------------------------------------

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(OpenPD)

ADD_SUBDIRECTORY(Source)
