# -----------------------------------------------------------------------
#   Destription: Annotation CMake file
#   Author: Zhong Chong
#   Date: 2015-9-14
# -----------------------------------------------------------------------

PROJECT(Annotation)
SET(SRC_LIST ImageAnnotate.cpp)
ADD_EXECUTABLE(Annotation ${SRC_LIST} )
