# -----------------------------------------------------------------------
#   Destription: Hello Project CMake file
#   Author: Zhong Chong
#   Date: 2015-9-15
# -----------------------------------------------------------------------

ADD_EXECUTABLE(Hello main.cpp)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
